# new_please-just-texting

./: .gitignore  README.md  gpt_service.py  main.py  prompt.py  pyproject.toml  requirements.txt
jinjaTests/: helloWorld.py
jinjaTests/templates/: helloWorld.jinja
prompts/: extract.jinja  extract.xml
schemas/: calendar_resoponse.py  commands.py
services/: create_event.py  event_crud.py  llm.py  schedule_parser.py  slack_messanger.py
tasks/: create_calendar.py  event_handler.py
utils/: auth_helper.py
