[project]
name = "new-please-just-texting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "fastapi[standard]>=0.115.12",
    "flake8>=7.2.0",
    "google-api-python-client>=2.167.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "isort>=6.0.1",
    "openai>=1.74.0",
    "pyngrok>=7.2.4",
    "uvicorn>=0.34.1",
]
